...
        }
        .fixedSize(horizontal: false, vertical: true)
    }
}

#Preview {
    SearchResultListItemView(city: City(name: "Chicago"))
}

